# segmentation

./: .gitignore  Pipfile  README.md  dodo.py  main.py  pyproject.toml  requirements.txt  setup.cfg
data/: categories.txt
docs/source/: conf.py  index.rst
src/: main.py  segmentation.py
tests/: test_.py  tests.py
